set(WXWIDGETS_BUILD_DIR "${BIICODE_ENV_DIR}/wxWidgets/3.0.2/build")

SET(ALL_WX_LIBS )
SET(ALL_WX_INCLUDES )
SET(ALL_WX_DEFINITIONS )
SET(ALL_WX_OPTIONS )

# Get libraries for linking
IF(WIN32)
	file(GLOB ALL_WX_LIBS "${WXWIDGETS_BUILD_DIR}/*.dll")
	file(COPY ${ALL_WX_LIBS} DESTINATION "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
	if(MSVC)
		file(GLOB ALL_WX_LIBS "${WXWIDGETS_BUILD_DIR}/*.lib")
		SET(ALL_WX_DEFINITIONS __WXMSW__ WINVER=0x0400 UNICODE _UNICODE __WXDEBUG__ WXUSINGDLL)
	endif()
ELSEIF(APPLE)
	file(GLOB ALL_WX_LIBS "${WXWIDGETS_BUILD_DIR}/*.dylib")
	SET(ALL_WX_DEFINITIONS _FILE_OFFSET_BITS=64 -DWXUSINGDLL __WXMAC__ __WXOSX__ __WXOSX_COCOA__)
	SET(ALL_WX_OPTIONS -stdlib=libc++)
ELSE(UNIX)
	file(GLOB ALL_WX_LIBS "${WXWIDGETS_BUILD_DIR}/*.so")
	SET(ALL_WX_DEFINITIONS _FILE_OFFSET_BITS=64 WXUSINGDLL __WXGTK__)
ENDIF()

# Get setup.h folder. This setup.h is created with wxwidgets configuration
IF(UNIX)
	file(GLOB SUBDIR_FOLDERS RELATIVE ${WXWIDGETS_BUILD_DIR}/wx/include ${WXWIDGETS_BUILD_DIR}/wx/include/*)
	FOREACH(SETUP_WX_FOLDER ${SUBDIR_FOLDERS})
		SET(SETUP_FOLDER_ABS ${WXWIDGETS_BUILD_DIR}/wx/include/${SETUP_WX_FOLDER})
		IF(IS_DIRECTORY ${SETUP_FOLDER_ABS})
			SET(ALL_WX_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} ${SETUP_FOLDER_ABS})
		ENDIF()
	ENDFOREACH()
ELSEIF(WIN32)
	set(_WX_DIR ${WXWIDGETS_BUILD_DIR}/mswud)
	SET(ALL_WX_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR} ${_WX_DIR})
	IF(MSVC)
		FILE(COPY "${_WX_DIR}/wx/msw/rcdefs.h" DESTINATION "${_WX_DIR}/wx")
	ENDIF()
ENDIF()

# Actually create targets: EXEcutables and libraries.
ADD_BII_TARGETS()

TARGET_INCLUDE_DIRECTORIES(${BII_BLOCK_TARGET} INTERFACE ${ALL_WX_INCLUDES})
TARGET_COMPILE_DEFINITIONS(${BII_BLOCK_TARGET} INTERFACE ${ALL_WX_DEFINITIONS})
TARGET_COMPILE_OPTIONS(${BII_BLOCK_TARGET} INTERFACE ${ALL_WX_OPTIONS})
TARGET_LINK_LIBRARIES(${BII_BLOCK_TARGET} INTERFACE  ${ALL_WX_LIBS})
